Adicionado botao CE e melhoria no front-end

--- a/index.html
+++ b/index.html
@@ -15,22 +15,31 @@
         <div id="result"></div>
 
         <div id="botoes">
-            <div class="botao" onclick="setDigito(7)">7</div>
-            <div class="botao" onclick="setDigito(8)">8</div>
-            <div class="botao" onclick="setDigito(9)">9</div>
-            <div class="botao" onclick="setDigito(' + ')">+</div>
-            <div class="botao" onclick="setDigito(4)">4</div>
-            <div class="botao" onclick="setDigito(5)">5</div>
-            <div class="botao" onclick="setDigito(6)">6</div>
-            <div class="botao" onclick="setDigito(' - ')">-</div>
-            <div class="botao" onclick="setDigito(1)">1</div>
-            <div class="botao" onclick="setDigito(2)">2</div>
-            <div class="botao" onclick="setDigito(3)">3</div>
-            <div class="botao" onclick="setDigito(' * ')">x</div>
-            <div class="botao" onclick="setDigito(0)">0</div>
-            <div class="botao" onclick="resete()">C</div>
-            <div class="botao" onclick="calcular()">=</div>
-            <div class="botao" onclick="setDigito(' / ')">/</div>
+            <div class="numeric">
+                <div class="botao" onclick="setDigito(7)">7</div>
+                <div class="botao" onclick="setDigito(8)">8</div>
+                <div class="botao" onclick="setDigito(9)">9</div>
+                <div class="botao" onclick="setDigito(4)">4</div>
+                <div class="botao" onclick="setDigito(5)">5</div>
+                <div class="botao" onclick="setDigito(6)">6</div>
+                <div class="botao" onclick="setDigito(1)">1</div>
+                <div class="botao" onclick="setDigito(2)">2</div>
+                <div class="botao" onclick="setDigito(3)">3</div>
+                <div class="botao" id="zero" onclick="setDigito(0)">0</div>
+                <div class="botao" onclick="setDigito('.')">,</div>
+            </div>
+            <div class="func">
+                <div class="botao" id="CE" onclick="">CE</div>
+                <div class="botao" onclick="resete()">C</div>
+                <div class="botao" onclick="setDigito(' / ')">/</div>
+                <div class="botao" onclick="setDigito(' * ')">x</div>
+
+                <div class="botao" onclick="setDigito(' - ')">-</div>
+                <div class="botao" onclick="calcular()">=</div>
+                <div class="botao" id="mais" onclick="setDigito(' + ')">+</div>
+
+            </div>
+            
     <script src="/index.js"></script>
 </body>
 </html>
